fixed overflow bug

--- a/styles/scss/_mel.scss
+++ b/styles/scss/_mel.scss
@@ -3,6 +3,7 @@
   background: #ffffff;
   min-height: 73vmax;
   overflow: -moz-hidden-unscrollable;
+  overflow: hidden;
 }
 
 .melBord {
